Fix button alignment to text in filter info chips

--- a/assets/styles/searchBar.less
+++ b/assets/styles/searchBar.less
@@ -38,6 +38,8 @@ search-bar {
 
           md-icon {
             color: white;
+            // Bugfix for icon not perfectly being aligned with text
+            margin-top: -1px;
           }
         }
       }
